# opensre

./: .dockerignore  .gitignore  AGENTS.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  SECURITY.md  SETUP.md  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  contributors.yml  tracer-demo.yml
app/: main.py
app/agent/: state.py
app/agent/memory/: __init__.py
app/agent/utils/: slack_delivery.py
app/demo/: __init__.py  local_grafana_live.py  local_rca.py
app/integrations/: catalog.py  store.py  verify.py
app/memories/: 2026-02-03-test_pipeline-prior000.md  2026-02-03-test_pipeline-prior001.md  2026-02-03-test_pipeline-prior002.md  2026-02-03-upstream_downstream_pipeline_prefect-prior001.md  SERVICE_MAP_EXPERIMENTS.md  SERVICE_MAP_README.md
configs/: grafana_accounts.yaml
docs/: docs.json  local-grafana-live.md
docs/daily-updates/: 2026-04-13.mdx
scripts/: tracer_demo.py
src/: ingest.py
src/agent/: graph_pipeline.py
tasks/: todo.md
tests/: AGENTS.md  benchmark_service_map_performance.py  run_demo.py  test_grafana_agent_integration.py
tests/fixtures/: grafana_alert.json
tests/integrations/: test_verify.py
tests/observability/: README.md  docker-compose.yml  query_grafana_cloud.py  run_local_with_cloud.py  validate_deployed_cloud.py  validate_grafana_cloud.py  validate_local.py  validate_spans.py
tests/shared/: grafana_query_client.py  grafana_validation.py
tests/test_case_cloudwatch_demo/: test_local_grafana.py  use_case.py
tests/test_case_grafana_validation/: GRAFANA_TEST_COMPLETE.md  README.md  test_agent_grafana_actions.py  test_grafana_roundtrip.py
tests/test_case_s3_failed_python_on_linux/: test_local_grafana.py  use_case.py
tests/test_case_superfluid/: test_local_grafana.py  use_case.py
tests/test_case_upstream_airflow_ecs_fargate/: test_local_dev_grafana_cloud.py  test_local_grafana.py  trigger_flow.py
tests/test_case_upstream_apache_flink_ecs/: test_local_grafana.py  test_local_grafana_cloud.py
tests/test_case_upstream_lambda/: test_local_grafana.py
tests/test_case_upstream_prefect_ecs_fargate/: test_local.py  test_local_grafana.py
(+112 files in other folders)
